--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   auto_size_text: ^3.0.0
   excel: ^2.0.0
   google_fonts: ^6.1.0
+  file_picker: ^4.5.0
 
 dev_dependencies:
   flutter_test:
