--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   excel: ^4.0.2
   google_fonts: ^6.1.0
   file_picker: ^6.1.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
