--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.1.0
   file_picker: ^6.1.1
   shared_preferences: ^2.0.15
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
