--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,15 @@ dependencies:
   file_picker: ^6.1.1
   shared_preferences: ^2.0.15
   flutter_screenutil: ^5.9.0
+  flutter_launcher_icons: "^0.13.1"
+  window_manager: ^0.3.7
+
+flutter_icons:
+  image_path: "./assets/logo.png"
+  windows:
+    generate: true
+    image_path: "./assets/logo.png"
+    icon_size: 48
 
 dev_dependencies:
   flutter_test:
